Don't reenter frame construction from anonymous content creation.  Bug 334430, r+sr=sicking